fix alignment of timeline speeds options and rename options to settings

--- a/nuxt/assets/_theme.css
+++ b/nuxt/assets/_theme.css
@@ -1,10 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-
 :root {
 	--background-color: #18181b;
 	--disabled-color: #A1A1B5;
 	--danger-color: #980000;
 	--text-color: #fff;
-	--heading-font: Ubuntu;
 	--heading-weight: 500;
 }
